[package]
name = "indexer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = { version ="0.15.0" }
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = { version = "1.0.89" }
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"], default-features = false }
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["full"] }
lib = { path = "../lib" }
text_io = "0.1.12"
thiserror = "1.0.40"
anyhow = "1.0.70"
env_logger = "0.10.0"
log = "0.4.17"
regex = "1.5.4"