[package]
name = "shrike-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
rusqlite = { version = "0.28.0", features = ["bundled", "serde_json"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
actix-cors = "0.6.4"
