[package]
name = "shrike-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = { version ="0.15.0" }
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = { version = "1.0.89" }
reqwest = { version = "0.11.13", features = ["json"]}
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["full"] }
clap = { version = "4.1.4", features = ["derive"] }
shrike-lib = { path = "../shrike-lib" }
text_io = "0.1.12"
